# apic

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODOS.md
benches/: RESULTS.md  pipeline.rs
src/: audio.rs  lib.rs  llm.rs  main.rs  stt.rs  tts.rs
